# dive

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
dive/: __init__.py
dive/core/: brain_2d.py  mask.py  mesh.py  scene.py  segments.py  tract.py
dive/io/: movie.py
dive/ui/: __init__.py  containers.py  core.py  elements.py  viz_ui.py
dive/utils/: color.py
dive/workflows/: dive.py
resources/: AF_L.vtk  IFOF_R.vtk  stat_template.csv
